<h5>5.01 Final (XOOPS 2.5.10) [NOT RELEASED]</h5>  Dev: Xoops 2.5.10, PHP 7.3.7
<hr>
- Facebook UI Style Rating (xd9527/mamba)
- fix $status (goffy/zyspec)

<h5>5.00 Final (XOOPS 2.5.10) [2019-04-30]</h5>  Dev: Xoops 2.5.10, PHP 7.3.4
<hr>
- reversed to while (list()) (mamba)
- reversed strict in_array (mamba)
-

<h5>5.00 RC1 (XOOPS 2.5.10) [2019-02-09]</h5>  Dev: Xoops 2.5.10, PHP 7.3.2
<hr>
- fix for Criteria('1', 1) (geekwright/mamba)


<h5>5.00 Beta 2 (XOOPS 2.5.10) [NOT RELEASED]</h5>  Dev: Xoops 2.5.10, PHP 7.3.1
<hr>
- remove old configs (alfredsx)
- cosmetics (mamba)
- fix $isColorpicker (mamba)


<h5>5.00 Beta 1 (XOOPS 2.5.10) [NOT RELEASED]</h5>  Dev: Xoops 2.5.10, PHP 7.3.1
<hr>
- RGB to HEX (mamba)
- changed exit() to die() (mamba)
- assignment in Condition (mamba)
- cosmetics (mamba)
- extracted classes GroupPermForm, GroupFormCheckBox (mamba)
- added  ENT_QUOTES | ENT_HTML5 to htmlspecialchars() (mamba)
- fix: missing Tag check (aquaportail/mamba)
- replace column # with column name  (aquaportail/mamba)
- remove mt_srand() (mamba)
- fixed _renderOptionTree signature  (aquaportail/mamba)


<h5>5.00 Alpha (XOOPS 2.5.9)  (NOT RELEASED)</h5>
<hr>
- Remove use of Art framework (geekwright)
- standardize names of classes, tables and constants to include "newbb" (geekwright)
- Use XMF whenever practical (geekwright)
- Simplify database migration strategy (geekwright)
- lots of warning/error cleanup (geekwright)
- extra code updates (mamba)
- Short syntax in array literals (mamba)
- added forumDescription to viewforum.php (aerograf/mamba)
- namespaces, autoload (mamba)


<h5>4.33 RC 13  (XOOPS 2.5.8)      (NOT RELEASED)</h5>
<hr>
- code cosmetics (mamba)
- standardize br tags (mamba)

<h5>4.33 RC 12  (XOOPS 2.5.8)      (2016-04-03)</h5>
<hr>
- removed @version (mamba)
- added auto-creation of /upload folders (aitor/mamba)
- added admin_footer.php (mamba)
- removed code for manual admin tabs (mamba)

<h5>4.33 RC 11  (XOOPS 2.5.8)      (2016-03-14)</h5>
<hr>